# LCCP-Turtlebot

./: .gitignore  README
devel/: .catkin  .rosinstall  setup.sh
devel/lib/ga73kec_says_hello/: hello_world_node
devel/lib/pkgconfig/: ga73kec_says_hello.pc
ga35non/: README  robotstart  turtlemaze_real.launch
ga35non/src/ga35non_says_hello/: CMakeLists.txt  package.xml
ga35non/src/hw2_ga35non/: CMakeLists.txt  package.xml  stopper.launch  turtlecircle.launch  turtlefollow.launch  turtlemaze.launch  turtlemove.launch
ga59muq/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ga73kec/src/: assignment01.txt
ga76jug/src/: broadcaster_ga76jug.cpp  listener_ga76jug.cpp  listener_ga76jug.cpp~
project/: Doxyfile
project/blender/: .gitignore  kobuki.blend  kobuki.blend1  kobuki_cycles.blend  kobuki_cycles.blend1  kobuki_save.blend  kobuki_save.blend1
project/doc/: index.html.lnk
project/src/: doc.h  utilities.h
project/src/lama_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
project/src/lama_msgs/msg/: InterfaceInfo.msg  LamaObject.msg
project/src/lama_msgs/srv/: GetInterfaceInfo.srv
src/: CMakeLists.txt.user.3cd53bc  CMakeLists.txt~
src/assignment2/: CMakeLists.txt  package.xml
src/ga25rid_says_hello/: CMakeLists.txt  CMakeLists.txt~  hello_world_node.cpp  package.xml  package.xml~
src/ga59muq_says_hello/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/ga73kec_a1_t1/: package.xml
src/ga73kec_a2_t2/: package.xml
src/ga73kec_a2_t3_group/: CMakeLists.txt
src/ga73kec_a2_t4/: package.xml~
src/ga73kec_a3_t2/: package.xml~
src/ga73kec_a3_t3/: package.xml~
src/ga73kec_pubsub/: CMakeLists.txt  package.xml
src/ga73kec_says_hello/: CMakeLists.txt  package.xml
src/ga73kec_task_1/: package.xml
src/ga76jug_says_hello/: CMakeLists.txt  package.xml
src/hw2_ga35non/: CMakeLists.txt  package.xml
(+595 files in other folders)
