<?xml version="1.0" encoding="UTF-8" ?>
<package>
  <name>lama_msgs</name>
  <version>0.1.3</version>
  <description>
	  lama_msgs provides messages for the lama framework such as
	  Frontier, Crossing.
  </description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/lama_msgs</url>
  <url type="repository">https://github.com/lama-imr/lama.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama/issues</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <export>
  </export>
</package>
